log/build_2025-02-03_23-24-25/torto_ctrl/stderr.log
  File "/home/sirapob/torto_ws/install/torto_ctrl/lib/python3.12/site-packages/torto_ctrl/inverse__kinematic.py", line 22
    if leg = FR:
       ^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?

Sorry: IndentationError: unindent does not match any outer indentation level (inverse_kinematic.py, line 28)
